# models_router

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  a.py  compose.local.yml  compose.yml  main.py  pyproject.toml
app/: __init__.py  config.py  database.py  local_models.py  main.py  provider.py  redaction.py  security.py
app/static/: app.js  index.html  styles.css
scripts/: reset_admin_password.py
tests/: eval_redaction.py  test_app.py  test_reset_admin_password.py
