[project]
name = "models-router"
version = "0.1.0"
description = "Privacy-aware, cost-aware router for OpenAI-compatible LLM APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0,<46.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
